[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-session-delete"
version = "1.0.8"
description = "CodeX Enhance desktop launcher and UI enhancer for Codex App"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "websocket-client>=1.7",
]

[project.scripts]
codex-session-delete = "codex_session_delete.cli:main"
codex-unlock = "codex_session_delete.cli:main"
codex-enhance = "codex_session_delete.cli:main"

[tool.setuptools]
packages = ["codex_session_delete"]

[tool.setuptools.package-data]
codex_session_delete = ["assets/*", "inject/*.js"]
